--- a/package.json
+++ b/package.json
@@ -17,16 +17,12 @@
     "typescript": "^4.9.5"
   },
   "lint-staged": {
-    "*.{ts,tsx,json}": [
+    "*.{js,ts,tsx,json}": [
       "prettier --write"
     ]
   },
   "importSort": {
-    ".js, .jsx, .mjs": {
-      "parser": "babylon",
-      "style": "module"
-    },
-    ".ts, .tsx": {
+    ".js, .jsx, .ts, .tsx": {
       "style": "module",
       "parser": "typescript"
     }
