--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "packages/*"
   ],
   "scripts": {
+    "lint": "yarn workspaces run lint",
     "prepare": "husky install"
   },
   "devDependencies": {
